--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ pytest-django = "^4.11.1"
 mypy = "^1.15.0"
 pytest-cov = "^6.1.1"
 pytest-xdist = "^3.7.0"
-django-stubs = { extras = ["compatible-mypy"], version = "^5.2.0" }
+django-stubs = { extras = ["compatible-mypy"], version = "^5.2.0", markers = "python_version >= '3.10'" }
 ruff = "^0.11.12"
 
 [tool.pytest.ini_options]
