--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 description = "Django extension for storing a lot of parameters in one field."
 authors = [{ name = "skv0zsneg", email = "<klimentlamonov@yandex.ru>" }]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.9"
 
 dependencies = ["django>=4.2.0"]
 
@@ -14,7 +14,7 @@ pytest-django = "^4.11.1"
 mypy = "^1.15.0"
 pytest-cov = "^6.1.1"
 pytest-xdist = "^3.7.0"
-django-stubs = { extras = ["compatible-mypy"], version = "^5.2.0" }
+django-stubs = { extras = ["compatible-mypy"], version = "^5.2.0", markers = "python_version >= '3.10'" }
 ruff = "^0.11.12"
 
 [tool.pytest.ini_options]
